# disk_spin_manager

./: Cargo.toml  README.md
.github/workflows/: build.yml  security-audit.yml
src/: cli.rs  disk_status.rs  lib.rs  lsblk.rs  main.rs  metrics.rs  watch.rs
