[package]
name = "disk_status_exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.19.0"
prometheus = "0.12"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.15"
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }

[dev-dependencies]
tempdir = "0.3.7"

