[package]
name = "disk_spin_manager"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.7", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4.21"
once_cell = "1.19.0"
prometheus = "0.13.4"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"

[dev-dependencies]
tempfile = "3.10.1"

