[package]
name = "disk_spin_manager"
version = "0.1.3"
edition = "2021"
publish = false
description = "A small tool to expose metrics on whether HDDs are currently spinning"
repository = "https://github.com/Javex/disk_spin_manager"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.7", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4.21"
notify = "6.1.1"
once_cell = "1.19.0"
prometheus = "0.13.4"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"

[dev-dependencies]
tempfile = "3.10.1"

